<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCE4E3"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="#B71C1C"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="@string/total_text_view"
            android:textSize="45sp"/>

        <TextView
            android:id="@+id/cost_text_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1B5E20"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/savings_textview"
        android:textSize="45sp"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/regular_saving_label_textview"
                android:textSize="30sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/regular_savings_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2E7D32"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/weekly_saving_label_textview"
                android:textSize="30sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/weekly_savings_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2E7D32"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/monthly_saving_label_textview"
                android:textSize="30sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/monthly_savings_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2E7D32"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>